Fixed bug on mobile where pause button wasn't clickable if editor menu was open

--- a/gravitate/public/ui.css
+++ b/gravitate/public/ui.css
@@ -101,7 +101,7 @@ canvas {
     background-color: rgba(0, 0, 0, 0);
     font-size: 3rem;
     color: white;
-    z-index: 10;
+    z-index: 20;
     pointer-events: none;
 }
 
